--- a/multistep-form/styles.css
+++ b/multistep-form/styles.css
@@ -5,6 +5,7 @@
     padding: .5rem;
     max-width: 350px;
     margin: 0 auto;
+    display: none;
 }
 
 .form-group {
@@ -37,4 +38,8 @@ margin: 0;
     margin-bottom: 1rem;
     text-align: center;
 
+}
+
+.card.active{
+    display: block;
 }
