--- a/sidebar-one/styles.css
+++ b/sidebar-one/styles.css
@@ -14,15 +14,135 @@
 .navigation {
     position: fixed;
     display: flex;
-    min-height: 40rem;
+    height: 100%;
     background-color: whitesmoke;
     width: 5rem;
     justify-content: center;
     align-items: center;
-    
+
 }
 
+.navigation.open {
+    width: 250px;
+}
 
+.navigation .menu-toggle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    border-bottom: 1px solid darkgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+}
 
+.navigation .menu-toggle::before {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: grey;
+}
 
+.navigation .menu-toggle::after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: grey;
+    box-shadow: 1 -8px grey;
+}
 
+.navigation.open .menu-toggle::after {
+    transform: translateY(0) rotate(-45deg);
+}
+
+.navigation ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
+.navigation ul li {
+    list-style: none;
+    position: relative;
+    width: 100%;
+    height: 3.5rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 10px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+li.list-item.active,
+.navigation ul li:active {
+    transform: translateX(30px);
+}
+
+.navigation.open ul li:active {
+    transform: translateX(10px);
+}
+
+.navigation ul li a {
+    text-decoration: none;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    text-align: center;
+    align-items: center;
+}
+
+.navigation ul li a .icon {
+    position: relative;
+    display: block;
+    min-width: 50px;
+    height: 50px;
+    line-height: 60px;
+    color: rgb(49, 49, 49);
+    font-size: 1.75rem;
+    transition: 0.5s;
+}
+
+.navigation ul li.active a .icon {
+    color: white;
+    background: var(--color);
+    border-radius: 10px;
+}
+
+.navigation ul li a .icon::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background: var(--color);
+    filter: blur(15px);
+    opacity: 0;
+    transform: 0.5s;
+
+}
+
+.navigation ul li.active a .icon::before {
+opacity: 0.5;
+}
+
+.navigation ul li a .text{
+    position: relative;
+    padding: 0 15px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    color: grey;
+    opacity: 0;
+    visibility: hidden;
+    transform: 0.5s;
+    
+}
