--- a/fcc-pto/styles.css
+++ b/fcc-pto/styles.css
@@ -19,13 +19,14 @@
     --main-color-nav: rgb(33, 33, 43);
     --main-font-color: rgb(222, 222, 222);
     scroll-behavior: smooth;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 .mostly-customized-scrollbar::-webkit-scrollbar {
     width: 5px;
     height: 8px;
     background-color: #aaa;
-    /* or add it to the track */
 }
 
 html {
@@ -37,8 +38,20 @@ body {
     box-sizing: border-box;
     margin: 0;
     width: 100%;
-    height: 100vh;
-    background: var(--main-color)
+    height: 100%;
+    background: linear-gradient(to bottom, rgb(23, 33, 43) 0%, rgb(33, 33, 43) 100%);
+    background-attachment: fixed;
+}
+
+footer {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+h1{
+    font-size: 2.8em;
+    margin: 0.2em;
 }
 
 .container-fixed {
@@ -55,11 +68,7 @@ body {
 
 }
 
-.container-content {
-    box-sizing: border-box;
-    display: block;
-    margin-left: 41%;
-}
+
 
 .logo {
     display: flex;
@@ -82,15 +91,46 @@ body {
     flex-grow: 4;
 }
 
+#navbar li {
+    width: 100%;
+    padding-bottom: 0.4em;
+    border-bottom: 2px solid var(--main-color);
+}
+
 .nav-footer {
     flex-grow: 0.5;
+}
+
+
+.sizing {
+    font-size: 1.5em;
+    gap: 1.5rem;
+}
+
+.nav-social {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5em;
+    flex-wrap: wrap;
+}
+
+.nav-social-list:hover {
+    transform: translateY(0.3rem);
+}
+
+.nav-social-list {
+    transition: transform 0.3s ease-in
+}
+
+ion-icon {
+    font-size: 1.5rem;
 }
 
 ul {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 1em;
+    padding: 0 1em;
     margin: 0 auto;
 }
 
@@ -104,12 +144,94 @@ ul li a {
 
 }
 
+/* container content */
+
+.container-content {
+    box-sizing: border-box;
+    display: flex;
+    margin-left: 41%;
+    flex-direction: column;
+    align-content: center;
+    align-items: stretch;
+    justify-content: center;
+}
+
+#welcome-section,
+#projects,
+#contact {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+
+}
+
+#projects{
+  flex-direction: column; 
+}
+
+.wellcome-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+    align-items: center;
+}
+
+.portfolio-title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.project-grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 1em;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+    justify-content: center;
+}
+.project-image{
+    display: flex;
+}
+
+
+
+
+/* container footer */
+#container-footer {
+
+    box-sizing: border-box;
+   
+    display: flex;
+    align-items: center;
+    margin-left: 40%;
+}
+
+.footer-content {
+
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+background: var(--main-color-nav);
+flex-direction: column;
+justify-content: center;
+}
+
+
+
 .footer-nav-block,
 .toggler {
     display: none;
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 420px) {
 
     .toggler {
         display: block;
@@ -120,7 +242,7 @@ ul li a {
         z-index: 50;
     }
 
-    .container-content {
+    .container-content, #container-footer {
         margin-left: 0;
 
     }
@@ -145,7 +267,6 @@ ul li a {
     ul {
         display: flex;
         flex-direction: column;
-        /* gap: 18px; */
         margin-right: 15px;
         cursor: pointer;
     }
