--- a/fcc-pto/styles.css
+++ b/fcc-pto/styles.css
@@ -20,7 +20,7 @@
     --main-font-color: rgb(222, 222, 222);
     scroll-behavior: smooth;
     font-family: Arial, Helvetica, sans-serif;
-    
+
 }
 
 .mostly-customized-scrollbar::-webkit-scrollbar {
@@ -49,7 +49,7 @@ footer {
     height: 100%;
 }
 
-h1{
+h1 {
     font-size: 2.8em;
     margin: 0.2em;
 }
@@ -154,6 +154,9 @@ ul li a {
     align-content: center;
     align-items: stretch;
     justify-content: center;
+    padding-left: 0.7em;
+    padding-right: 0.7em;
+
 }
 
 #welcome-section,
@@ -166,8 +169,10 @@ ul li a {
 
 }
 
-#projects{
-  flex-direction: column; 
+#projects {
+    flex-direction: column;
+    height: 100%;
+    overflow: hidden;
 }
 
 .wellcome-header {
@@ -178,13 +183,16 @@ ul li a {
     align-items: center;
 }
 
-.portfolio-title{
+.portfolio-title {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.project-grid{
+
+.project-grid {
     display: grid;
+
+
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 1em;
@@ -196,8 +204,15 @@ ul li a {
     align-content: center;
     justify-content: center;
 }
-.project-image{
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.project-image {
     display: flex;
+    flex-direction: column;
 }
 
 
@@ -207,10 +222,12 @@ ul li a {
 #container-footer {
 
     box-sizing: border-box;
-   
+
     display: flex;
     align-items: center;
     margin-left: 40%;
+    padding-left: 0.7em;
+    padding-right: 0.7em;
 }
 
 .footer-content {
@@ -219,9 +236,9 @@ ul li a {
     width: 100%;
     height: 100vh;
     align-items: center;
-background: var(--main-color-nav);
-flex-direction: column;
-justify-content: center;
+    background: var(--main-color-nav);
+    flex-direction: column;
+    justify-content: center;
 }
 
 
@@ -229,6 +246,14 @@ justify-content: center;
 .footer-nav-block,
 .toggler {
     display: none;
+}
+
+@media screen and (max-width: 720px) {
+    .project-grid {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+    }
 }
 
 @media screen and (max-width: 420px) {
@@ -242,7 +267,8 @@ justify-content: center;
         z-index: 50;
     }
 
-    .container-content, #container-footer {
+    .container-content,
+    #container-footer {
         margin-left: 0;
 
     }
@@ -316,6 +342,11 @@ justify-content: center;
 
     }
 
+    .project-grid {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+    }
 
 
     .footer-nav-block {
