--- a/fcc-pto/styles.css
+++ b/fcc-pto/styles.css
@@ -52,6 +52,10 @@ footer {
 h1 {
     font-size: 2.8em;
     margin: 0.2em;
+    text-align: center;
+}
+p{
+    padding: 0 0.7em;
 }
 
 .container-fixed {
@@ -81,6 +85,7 @@ h1 {
 
 .logo p {
     margin: 0;
+    padding: 0;
 }
 
 .nav-block {
@@ -226,8 +231,6 @@ img {
     display: flex;
     align-items: center;
     margin-left: 40%;
-    padding-left: 0.7em;
-    padding-right: 0.7em;
 }
 
 .footer-content {
