--- a/fcc-pto/styles.css
+++ b/fcc-pto/styles.css
@@ -60,10 +60,12 @@ h1 {
 h2 {
     margin: 0.3em;
 }
+
 h2 a {
     text-decoration: none;
     color: var(--main-font-color);
 }
+
 h4 {
     font-size: 1.3em;
     text-align: center;
@@ -263,7 +265,8 @@ img {
 
 
 /* container footer */
-#container-footer {
+#container-footer,
+#stay-with-ukraine {
 
     box-sizing: border-box;
 
@@ -272,15 +275,21 @@ img {
     margin-left: 40%;
 }
 
-.footer-content {
+.footer-content,
+.swu-content {
 
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     align-items: center;
     background: var(--main-color-nav);
     flex-direction: column;
     justify-content: center;
+}
+
+.swu-content {
+
+    height: 30vh;
 }
 
 
@@ -290,20 +299,20 @@ img {
     display: none;
 }
 
-.back-on-top{
+.back-on-top {
     position: fixed;
     bottom: 1.2em;
     right: 1.5em;
     background: var(--main-font-color);
     width: 50px;
-height: 50px;
+    height: 50px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.to-top{
+.to-top {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -314,7 +323,7 @@ height: 50px;
     background: var(--main-color-nav);
 }
 
-.to-top a{
+.to-top a {
     color: var(--secondary-color);
     font-size: 1.8em;
 }
@@ -342,7 +351,9 @@ height: 50px;
     }
 
     .container-content,
-    #container-footer {
+    #container-footer,
+    #stay-with-ukraine,
+    .swu-content {
         margin-left: 0;
 
     }
@@ -449,11 +460,11 @@ height: 50px;
         transition: all 0.4s ease;
     }
 
-    .toggler:checked~ #navbar .footer-nav-block {
+    .toggler:checked~#navbar .footer-nav-block {
         width: 30%;
     }
 
-    .toggler:checked~ #navbar .footer-nav-block {
+    .toggler:checked~#navbar .footer-nav-block {
         visibility: visible;
         display: flex;
         align-items: center;
@@ -478,5 +489,15 @@ height: 50px;
 
     .nav-social {
         gap: 0.1em;
+    }
+}
+
+@-moz-document url-prefix() {
+    .to-top {
+        align-items: flex-start;
+    }
+
+    .to-top a {
+        margin-top: -2px;
     }
 }
