--- a/fcc-pto/styles.css
+++ b/fcc-pto/styles.css
@@ -207,7 +207,7 @@ ul li a {
 #contact {
     display: flex;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     align-items: center;
 
 }
@@ -280,7 +280,7 @@ img {
 
     display: flex;
     width: 100%;
-    height: 70vh;
+    min-height: 70vh;
     align-items: center;
     background: var(--main-color-nav);
     flex-direction: column;
