--- a/fcc-pto/styles.css
+++ b/fcc-pto/styles.css
@@ -76,7 +76,10 @@ h4 {
 p {
     font-size: 1.1em;
     padding: 0 0.7em;
+    line-height: 1.6em;
 }
+
+
 
 .container-fixed {
     display: flex;
@@ -244,14 +247,18 @@ ul li a {
     align-items: start;
 }
 
-img {
-    inline-size: 100%;
+.led-img{
+    box-shadow: 2px -5px 20px var(--secondary-color);
     padding: 1px;
     border: 2px solid var(--secondary-color);
     border-radius: 10px;
-    text-shadow: 2px 2px 8px var(--secondary-color);
+}
+
+img {
+    inline-size: 100%;
     aspect-ratio: 4/3;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .project-image {
@@ -276,8 +283,7 @@ img {
     margin-left: 40%;
 }
 
-.footer-content,
-.swu-content {
+.footer-content {
 
     display: flex;
     width: 100%;
@@ -291,6 +297,7 @@ img {
 .swu-content {
 
     height: 30vh;
+    background: var(--main-color-nav);
 }
 
 
