--- a/fcc-pto/styles.css
+++ b/fcc-pto/styles.css
@@ -320,8 +320,8 @@ img {
     bottom: 1.2em;
     right: 1.5em;
     background: var(--main-font-color);
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -333,15 +333,15 @@ img {
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 44px;
-    height: 44px;
+    width: 34px;
+    height: 34px;
     border-radius: 50%;
     background: var(--main-color-nav);
 }
 
 .to-top a {
     color: var(--secondary-color);
-    font-size: 1.8em;
+    font-size: 1.4em;
 }
 
 @media screen and (max-width: 720px) {
@@ -394,12 +394,13 @@ img {
     ul {
         display: flex;
         flex-direction: column;
-        margin-right: 15px;
+        margin-right: 0.9em;
         cursor: pointer;
     }
 
     .container-fixed .logo {
         font-size: 3em;
+        margin-left: 0.9em;
 
     }
 
@@ -426,7 +427,7 @@ img {
         position: relative;
         background: var(--main-font-color);
         height: 3px;
-        width: 95%;
+        width: 40px;
     }
 
     .hamburger div::before,
@@ -436,7 +437,7 @@ img {
         background: var(--main-font-color);
         top: 10px;
         height: 3px;
-        width: 95%;
+        width: 40px;
     }
 
     .hamburger div::after {
