--- a/CDTimer/styles.css
+++ b/CDTimer/styles.css
@@ -61,7 +61,7 @@ body {
 .flip-card.flip::before {
 
     position: absolute;
-    content: '4';
+    content: attr(data-current-number);
     width: 100%;
     animation: flip-top 250ms ease-in;
     transform-origin: bottom;
@@ -78,7 +78,7 @@ body {
 .flip-card.flip::after {
 
     position: absolute;
-    content: '4';
+    content: attr(data-next-number);
     width: 100%;
     bottom: 0;
     animation: flip-bottom 250ms ease-out 250ms;
