--- a/CDTimer/styles.css
+++ b/CDTimer/styles.css
@@ -1,6 +1,6 @@
 *,
-::before,
-::after {
+ .bottom-flip,
+ .top-flip {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3rem;
@@ -24,8 +24,8 @@ body {
 
 .top,
 .bottom,
-.flip-card.flip::after,
-.flip-card.flip::before {
+.flip-card .top-flip,
+.flip-card .bottom-flip {
     height: 0.75em;
     line-height: 1;
     padding: .25em;
@@ -34,7 +34,7 @@ body {
 }
 
 .top,
-.flip-card.flip::before {
+.flip-card .top-flip {
     background-color: #f7f7f7;
     border-top-right-radius: .1em;
     border-top-left-radius: .1em;
@@ -47,7 +47,7 @@ body {
 }
 
 .bottom,
-.flip-card.flip::after {
+.flip-card .bottom-flip {
 
     background-color: white;
     display: flex;
@@ -58,7 +58,7 @@ body {
 }
 
 
-.flip-card.flip::before {
+.flip-card .top-flip {
 
     position: absolute;
     content: attr(data-current-number);
@@ -75,7 +75,7 @@ body {
     }
 }
 
-.flip-card.flip::after {
+.flip-card .bottom-flip {
 
     position: absolute;
     content: attr(data-next-number);
