--- a/CDTimer/styles.css
+++ b/CDTimer/styles.css
@@ -3,7 +3,7 @@
  .top-flip {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 3rem;
+    font-size: 2rem;
 
 }
 html{
@@ -13,8 +13,6 @@ html{
 body {
     background-color: #f2f1ed;
     color: var(--mail-color);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
-    border-radius: .1em;
     display: inline-block;
 
 }
@@ -23,6 +21,8 @@ body {
     display: inline-flex;
     flex-direction: column;
     position: relative;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
+    border-radius: .1em;
 }
 
 .top,
@@ -97,3 +97,26 @@ body {
     }
 }
 
+.container{
+    display: flex;
+    gap: .5em;
+
+}
+
+.container-segment{
+    display: flex;
+    flex-direction: column;
+    gap: .1em;
+    align-items: center;
+}
+
+.segment{
+    
+    display: flex;
+    gap: .1em;
+}
+
+
+.segment-title{
+    font-size: 1rem;
+}
