--- a/SW/styles.css
+++ b/SW/styles.css
@@ -93,7 +93,7 @@ body {
     font-size: 1.5em;
     text-align: center;
     margin-top: 1em;
-    color: #202020;
+    color: #c6c6c6;
     font-weight: 500;
 }
 
