--- a/wnCCR/styles.css
+++ b/wnCCR/styles.css
@@ -41,16 +41,17 @@ html {
 
 
 .winImg {
-    width: 100%;
+    width: 90%;
     height: 100%;
     margin: 15px;
 }
 
 .winImg img {
-    aspect-ratio: 4/3;
+    /* aspect-ratio: 4/3; */
     object-fit: contain;
-    inline-size: 85%;
+    inline-size: 75%;
 }
+
 
 .none {
     display: none;
