--- a/1222/TDA1222/styles.css
+++ b/1222/TDA1222/styles.css
@@ -11,13 +11,23 @@ html {
 }
 
 .container {
-    width: 90%;
-    max-width: 34em;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    /* max-width: 34em;
     position: absolute;
     transform: translate(-50%, 50%);
     top: 20%;
-    left: 50%;
-    
+    left: 50%; */
+
+}
+
+.task-box {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
 
 #new-task {
@@ -25,7 +35,7 @@ html {
     background-color: white;
     padding: 1.8em 1.25em;
     border-radius: 0.3em;
-    box-shadow: 0 1.25em 1.8em #404040;
+    box-shadow: 0 1.25em 1.8em #5c5c5c;
     display: grid;
     grid-template-columns: 9fr 3fr;
     gap: 1em;
@@ -68,9 +78,10 @@ html {
     padding-top: 3.8em;
     width: 100%;
     border-radius: 0.6em;
+    box-shadow: 0 1.25em 1.8em #5c5c5c;
 }
 
-.task{
+.task {
     background-color: white;
     padding: .3em .6em;
     margin-top: .6em;
@@ -78,33 +89,54 @@ html {
     align-items: center;
     border-bottom: 2px solid gray;
     cursor: pointer;
+    gap: 10px;
 }
 
-.task span{
+.task span {
     font-size: .9em;
-    font-weight: 400px;
+    font-weight: 400;
 }
 
-.task button{
+.task button {
     color: white;
     padding: .8em 0;
-    width: 2.8em;
+    min-width: 2.8em;
     border-radius: .3em;
     border: none;
     outline: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.delete{
+.delete {
     background-color: red;
 }
 
-.edit{
+.edit {
     background-color: #0b87ff;
     margin-left: auto;
     margin-right: 3em;
 }
 
-.completed{
+.completed {
     text-decoration: line-through;
+}
+
+svg {
+    width: 15px;
+    height: 15px;
+}
+
+
+@media screen and (max-width: 769px) {
+
+    #new-task,
+    .task {
+        display: flex;
+        flex-direction: column;
+    }
+
+   
 }
